# changes

./: .gitignore  AGENTS.md  LICENSE  README.md  StreamlitDesktopAppBuildCommand.txt  THIRD_PARTY_NOTICES.md  pyproject.toml
.streamlit/: config.toml
docs/: ai-worker-language-policy.ja.md  bass-export-api.md  chord-engine-core.md  chord-export-api.md  chord-internal-implementation-notes.md  chord-register-realization.md  cli.md  cloud-export-api.md  cloud-role-migration-plan.md  concept.md  current-state.md  digitone-ii-setup.md  digitone-internal-spec.md  digitone-syx-cli-modes.md  digitone-syx-real-send-guarded-cli.md  digitone-syx-send-dry-run-cli.md  e2e-user-workflow.md  fixture-inventory.md  generated-artifacts-policy.md  harmony-engine-spec.md  index.md  known-limitations.md  manifest-aware-validation.md  midi-backend-adapter-design.md  midi-hardware-validation-checklist.md  midi-send-transport-boundary.md  musicxml-import-normalization.ja.md  product-architecture.md  real-send-workflow.md  release-candidate-status.md  release-checklist.md  rendered-arrangement-flattening.md  rendered-arrangement-integration.md  rendered-arrangement-model.md  rendered-arrangement-pipeline.md  repository-integration-feasibility.md  roadmap.md  song-model-yaml-v1.md  toolkit-integration-ci-design.md  track8-chord-event-model.md  (+20 more)
examples/: blue_moon.progression.yaml  ii_v_i.progression.yaml  ii_v_i_intro_a.progression.yaml  waltz.yaml
scripts/: BuildDesktop.ps1  PrepareBundledIRealMusicXML.ps1  verify_desktop_build.py
tests/: conftest.py  test_app_settings_migration.py  test_arrangement_flattener.py  test_arrangement_renderer.py  test_chord_engine.py  test_chord_realization.py  test_chord_rules.py  test_cli_digitone_backends.py  test_cli_help_and_dispatch.py  test_cloud_center_spread_repair.py  test_cloud_role_migration_contract.py  test_cloud_voice_leading_seed.py  test_digitone_backend.py  test_digitone_bundle_planner.py  test_digitone_e2e_workflow_cli.py  test_digitone_linear_split_planner.py  test_digitone_manifest_check.py  test_digitone_note_encoding.py  test_digitone_real_send_cli_guarded.py  test_digitone_send_cli.py  test_digitone_send_cli_help.py  test_digitone_sysex_file.py  test_digitone_tempo.py  test_digitone_toolkit_integration.py  test_digitone_transport.py  test_docs_release_candidate.py  test_editor_state.py  test_editor_to_song.py  test_form_expander.py  test_harmonic_context.py  test_harmonic_context_musicxml_scope.py  test_import_bundle.py  test_ireal_converter.py  test_key_signature.py  test_library_save_modes.py  test_library_tunisia_smoke.py  test_main_ui_import_progress.py  test_main_ui_section_labels.py  test_midi_writer.py  (+38 more)
(+1612 files in other folders)
