[project]
name = "changes"
version = "0.1.0"
description = "A machine-jazz harmony engine with generic MIDI output and Digitone Native SysEx backend preparation."
authors = [
    { name = "Emnyeca" },
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=5.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pandas>=2.0",
]
midi = [
    "mido>=1.2.10",
    "python-rtmidi>=1.4.9",
]
realtime = [
    "python-rtmidi>=1.4.9",
]
ui = [
    "streamlit>=1.58",
    "pandas>=2.0",
    "altair>=5.0",
]
sysex = [
    "digitone-syx-toolkit @ git+https://github.com/emnyeca/digitone-syx-toolkit.git@v0.1.0",
]

[project.scripts]
changes = "changes.cli:main"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
